k8s_objects/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
  externalIPs:
    - 192.168.56.11
